# Singers

./: CMakeLists.txt  README.md  cod facut de chatgpt  main.cpp  output.txt  tastatura.txt
ProjectCpps/: Bird.cpp  CreateIconFactory.cpp  Metal.cpp  ScreenIcon.cpp  SharedData.cpp  Snake.cpp  UserInput.cpp  UserInput.tpp
ProjectHeaders/: Bird.h  CreateIconFactory.h  IconFactory.h  InvalidInputException.h  Metal.h  ScreenIcon.h  SharedData.h  Snake.h  UserInput.h
